@@ -79,7 +79,6 @@ contrib/pullart.c                     Recover articles from cyclic buffers
 contrib/reset-cnfs.c                  Reset the state parts of a CNFS buffer
 contrib/respool.c                     Respool articles in the storage manager
 contrib/sample.init.script            Example SysV-style init.d script
-contrib/showtoken.in                  Decode storage API tokens
 contrib/stathist.in                   Parse history statistics
 contrib/thdexpire.in                  Dynamic expire for timehash and timecaf
 contrib/tunefeed.in                   Tune a feed by comparing active files
