@@ -18,6 +18,7 @@ bool tradspool_cancel(TOKEN token);
 bool tradspool_ctl(PROBETYPE type, TOKEN *token, void *value);
 bool tradspool_flushcacheddata(FLUSHTYPE type);
 void tradspool_printfiles(FILE *file, TOKEN token, char **xref, int ngroups);
+char *tradspool_explaintoken(const TOKEN token);
 void tradspool_shutdown(void);
 
 #endif
